# libproxy

./: .cproject  .gitignore  .project  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README.md  SECURITY.md  TODO.md  autogen.sh  codecov.yml  configure.ac  copyfile.py  libproxy.doap  libproxy.spec.in  meson.build  meson_options.txt
bindings/: CMakeLists.txt  libproxy.py
bindings/csharp/: AssemblyInfo.cs  libproxy-sharp-1.0.pc.cmake  libproxy.cs
bindings/perl/: CMakeLists.txt  Changes  Libproxy.xs  META.yml  Makefile.PL  typemap
bindings/perl/lib/: CMakeLists.txt
bindings/perl/src/: CMakeLists.txt  Libproxy.xs
bindings/perl/t/: CMakeLists.txt
bindings/python/: CMakeLists.txt  libproxy.py
bindings/python/python2/: CMakeLists.txt
bindings/python/python3/: CMakeLists.txt
docs/: applications.md  architecture.md  build-howto.md  build-steps.md  configuration-logic.md  meson.build  perl.md  proxy-authentication.md  px.toml.in  python.md  ruby.md  samples.md  vala.md
docs/samples/vala/: Makefile
libmodman/: CMakeLists.txt  module.cpp  module.hpp  module_manager.cpp  module_manager.hpp
libmodman/test/: CMakeLists.txt  builtin.cpp  main.cpp  main.hpp
libmodman/test/modules/: module.cpp.in
libproxy/: CMakeLists.txt  array.hpp  builtin_modules.hpp.in  config.hpp  config_file.c  config_file.cpp  config_file.hpp  dl_module.cpp  dl_module.hpp  extension_config.hpp  extension_ignore.hpp  extension_network.hpp  extension_pacrunner.cpp  extension_pacrunner.hpp  extension_wpad.cpp  libproxy-1.0.pc.in  libproxy.map  libproxyd.cpp  misc.cpp  module.hpp  module_config.cpp  module_config.hpp  module_manager.cpp  module_manager.h  module_manager.hpp  module_network.hpp  module_pacrunner.cpp  module_types.cpp  module_wpad.cpp  module_wpad.hpp  modules.hpp  pac.cpp  pac.h  pac.hpp  proxy.cpp  proxy.h  strdict.cpp  url.cpp  url.hpp
libproxy/cmake/: devfiles.cmk  libproxy.cmk  modules.cmk  pkgconfig.cmk  pxmodule.cmk
libproxy/cmake/modules/: config_gnome.cmk  config_kde.cmk  config_pacrunner.cmk  config_sysconfig.cmk  network_networkmanager.cmk  pacrunner_duktape.cmk  pacrunner_mozjs.cmk  pacrunner_webkit.cmk
libproxy/modules/: config_direct.c  config_direct.cpp  config_envvar.cpp  config_file.cpp  config_gnome.cpp  config_gnome3.cpp  config_kde.cpp  config_kde4.cc  config_kde4.cpp  config_macosx.cpp  config_pacrunner.cpp  config_sysconfig.cpp  config_w32reg.c  config_w32reg.cpp  ignore_domain.cpp  ignore_hostname.cpp  ignore_ip.cpp  network_networkmanager.cpp  pacrunner_duktape.cpp  pacrunner_mozjs.cpp  pacrunner_natus.cpp  pacrunner_webkit.c  pacrunner_webkit.cpp  pxgconf.cpp  pxgsettings.cpp  wpad_dns.cpp  wpad_dns_alias.cpp  wpad_dnsdevolution.cpp  xhasclient.c  xhasclient.cpp
libproxy/test/: CMakeLists.txt  get-pac-test.cpp  url-encode.cpp  url-test.cpp
src/: proxy.h  (+3 more)
src/backend/: meson.build  px-manager.c  px-manager.h  px-plugin-config.c  px-plugin-config.h  px-plugin-download.c  px-plugin-download.h  px-plugin-pacrunner.c  px-plugin-pacrunner.h
src/backend/dbus/: dbus.c  meson.build  org.libproxy.proxy-system.service.in  org.libproxy.proxy.conf  org.libproxy.proxy.conf.in  org.libproxy.proxy.service.in  org.libproxy.proxy.xml  proxyd.service.in
src/backend/plugins/: meson.build
src/bindings/dotnet/: Makefile.am  libproxy-sharp-1.0.pc.in  libproxy.cs
src/lib/: Makefile.am  array.c  array.h  config_file.c  config_file.h  dns.c  dns.h  ip.h  misc.c  misc.h  module_manager.c  module_manager.h  pac.c  plugin.h  plugin_config.h  plugin_ignore.h  plugin_manager.c  plugin_manager.h  plugin_network.h  plugin_wpad.c  plugin_wpad.h  proxy.c  proxy.h  proxy_factory.c  proxy_factory.h  slp.c  slp.h  strdict.c  url.c  url.h  wpad.c  wpad.h  wpad_dns.c
src/libproxy/: libproxy.map  meson.build  proxy-dbus.c  proxy.c  proxy.h  test.map
src/plugins/: Makefile.am  config_direct.c  config_file.c  config_gnome.c  config_kde.c  config_wpad.c  envvar.c  file.c  gnome.c  ignore_domain.c  ignore_ip.c  kde.c  mozjs.c  networkmanager.c  pacrunner_webkit.c  wpad_dns.c  wpad_dnsdevolution.c
tags/libproxy-0.4.1/libproxy/: CMakeLists.txt  url.cpp
tests/: config-env-test.c  config-gnome-test.c  config-kde-test.c  config-osx-test.c  config-sysconfig-test.c  config-windows-test.c  libproxy-test.c  meson.build  px-manager-helper.c  px-manager-helper.h  px-manager-test.c
tests/data/: px-manager-direct  px-manager-pac  px-manager-sample.pac  px-manager-wpad  sample-kde-proxy-disabled  sample-kde-proxy-manual  sample-kde-proxy-pac  sample-kde-proxy-pac-without-scheme  sample-kde-proxy-wpad  sample-sysconfig-proxy  sample-sysconfig-proxy-invalid
trunk/: .cproject  .project  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  NEWS  autogen.sh  configure.ac  libproxy.spec.in
trunk/bindings/: CMakeLists.txt  libproxy-sharp-1.0.pc.in
trunk/cmake/: CMakeCSharpCompiler.cmake.in  CMakeDetermineCSharpCompiler.cmake  cpack.cmk  mingw32.cmake
trunk/doc/: libproxy_files.dia
trunk/libmodman/: CMakeLists.txt  module.cpp  module.hpp  module_manager.cpp  module_manager.hpp
trunk/libproxy/: CMakeLists.txt  array.c  array.cpp  config.hpp  config_file.cpp  config_file.hpp  dl_module.cpp  dl_module.hpp  extension_config.cpp  extension_config.hpp  extension_ignore.hpp  extension_network.hpp  extension_pacrunner.cpp  extension_pacrunner.hpp  extension_wpad.cpp  extension_wpad.hpp  libproxy-1.0.pc.in  misc.c  module.cpp  module_ignore.hpp  module_manager.c  module_manager.cpp  module_manager.hpp  module_pacrunner.cpp  module_pacrunner.hpp  module_types.cpp  module_types.hpp  module_wpad.cpp  pac.cpp  pac.hpp  proxy.cpp  strdict.hpp  url.c  url.cpp  url.h  url.hpp
trunk/src/: Makefile.am  proxy_factory.c  proxy_plugin.h
trunk/test.d/: README.tests  libproxy_iniparser.test  libproxy_proxy_and_lib.test  libproxy_test_envvar.test  libproxy_test_nomodule_directfallback.test  libproxy_test_pac_file.test  libproxy_test_pacrunner_mozjs.test  libproxy_test_pacrunner_webkit.test
trunk/utils/: CMakeLists.txt  proxy.c
utils/: CMakeLists.txt  iniparse.c  proxy.c
(+398 files in other folders)
